<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/citizenship_img"

    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="124dp"
        android:layout_height="168dp"
        android:src="@drawable/flag" />

    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/question_declaration"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:padding="8dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            android:text="@string/true_text"
            android:layout_width="wrap_content"
            android:background="@android:color/white"
            android:layout_height="wrap_content">
        </Button>

        <Button
            android:id="@+id/false_button"
            android:text="@string/false_text"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:alpha="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_text"
            android:src="@drawable/back">

        </ImageButton>

        <ImageButton
            android:contentDescription="@string/next_text"
            android:layout_marginLeft="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/next"
            android:background="@android:color/transparent"
            android:id="@+id/next_button">
        </ImageButton>

    </LinearLayout>

</LinearLayout>